feat: add sample project

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "itra_final_project_frontend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build"
   },
   "repository": {
     "type": "git",
@@ -14,5 +16,24 @@
   "bugs": {
     "url": "https://github.com/LeanidRymkevich/ITra_Final_Project_Frontend/issues"
   },
-  "homepage": "https://github.com/LeanidRymkevich/ITra_Final_Project_Frontend#readme"
+  "homepage": "https://github.com/LeanidRymkevich/ITra_Final_Project_Frontend#readme",
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^9.9.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1"
+  }
 }
