--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "i18next-http-backend": "^2.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-i18next": "^15.0.3",
     "react-router-dom": "^6.26.2"
   },
