--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@mui/icons-material": "^6.1.2",
     "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.4",
-    "@tanstack/react-query": "^5.59.15",
+    "@reduxjs/toolkit": "^2.3.0",
     "i18next": "^23.16.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
@@ -33,6 +33,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.1",
     "react-i18next": "^15.0.3",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "yup": "^1.4.0"
   },
