--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mui/lab": "^6.0.0-beta.12",
     "@mui/material": "^6.1.4",
     "@reduxjs/toolkit": "^2.3.0",
+    "http-method-enum": "^1.0.0",
     "i18next": "^23.16.0",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.6.2",
