feat: add production server url

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_SERVER_URL="http://localhost:3001/" 
+VITE_DEVELOPMENT_SERVER_URL="http://localhost:3001/"
+VITE_PRODUCTION_SERVER_URL="https://questionforms-6ec63b58dc18.herokuapp.com/"
